# othello-reversi

./: .makefile.swp  CMakeLists.txt  README.md  makefile
include/: application.h  board.h  button.h  config.h  display.h  font_manager.h  game_over_state.h  game_state.h  ideas.h  main_menu_state.h  options_state.h  play_state.h  resource_holder.h  resource_manager.h  util.h
src/: CMakeLists.txt  application.cpp  board.cpp  button.cpp  display.cpp  font_manager.cpp  game_state.cpp  main.cpp  main_menu_state.cpp  options_state.cpp  play_state.cpp  play_state_ui.cpp  resource_holder.cpp  util.cpp
